# Annotation_App

./: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  authenticate.py  create_table.sql  deploy.sh  docker-compose.yml  login.py  main.py  public.sqlite  pyproject.toml  requirements.txt  utils.py
doc/: er.drawio
models/: datasets.py  evaluate_stautus.py  user_counts.py  users.py
pages/: annotate.py  login.py  management.py
process/: auth.py  constants.py  load_data.py  segment.py
process/cleaner/: auto_cleaner.py
repository/: annotated_datasets.py  datasets.py  evaluate_status.py  user.py  user_execute_count.py
repository/cloud_sql_mysql/: database.py  datasets.py  evaluate_status.py  user.py  user_execute_count.py
